# IOC-Inspector

./: .env.example  .gitignore  Makefile  README.md  SECURITY.md  UnitTestingGuide.md  codecov.yml  dev-requirements.txt  exceptions.py  logger.py  main.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  settings.py
.github/workflows/: ci.yml  lint.yml
examples/: macro_test.docm
ioc_inspector_core/: __init__.py  abuseipdb_check.py  doc_parser.py  heuristics.py  macro_analyzer.py  pdf_parser.py  pytest.ini  report_generator.py  report_schema.json  url_reputation.py
tests/: conftest.py  test_smoke.py
tests/unit/: test_abuseipdb_check.py  test_analyze_dispatch.py  test_cli.py  test_doc_parser.py  test_heuristics.py  test_pdf_parser_error.py  test_pdf_parser_ok.py  test_report_generator.py  test_url_reputation.py
