[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "ioc_inspector"
version     = "0.0.0"
description = "Static IOC extractor and scorer for PDFs & Office docs"

[tool.setuptools]
packages   = ["ioc_inspector_core"]         # directories containing __init__.py
py-modules = ["logger", "settings"]         # single-file modules at repo root
